# learopengl3

./: .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: _fixes.hpp.09F826E72E22A5F5.idx  _vectorize.hpp.B87F58BCD41EA4A0.idx  common.hpp.4428D5FC34A57122.idx  compute_common.hpp.5CDD592910C23833.idx  compute_vector_relational.hpp.12C192537EC86F04.idx  constants.hpp.F4C0F98BDA58736E.idx  constants.inl.E58176ACBD7A8824.idx  epsilon.hpp.4FA1C94920856BBE.idx  epsilon.inl.D9D7A25E6FCF9BDC.idx  exponential.hpp.E5AF10F0E65F99C9.idx  func_common.inl.5221C55ECC0CDB82.idx  func_exponential.inl.309887B4568130B7.idx  func_geometric.inl.9C226AAE4E0A61ED.idx  func_integer.inl.7409199665E9AFD0.idx  func_matrix.inl.53FF4E7C871C671B.idx  func_packing.inl.7998F3942406D3DD.idx  func_trigonometric.inl.427C684C9C120D13.idx  func_vector_relational.inl.8BC51C02D7696A94.idx  fwd.hpp.A783C6F99045E85C.idx  geometric.hpp.EDFF02091391E5BE.idx  glad.c.BAC34F8CEC2D0846.idx  glad.h.6DE39492F7843D91.idx  glfw3.h.ED2A392A70EA70DE.idx  glm.hpp.874AD909CAAA2985.idx  helloShader.cpp.ECBCF76159FE37B0.idx  (+166 more)
Include/: KHR  glad
glad/src/: glad.c
glfw-3.4/examples/: glad.c
include/: GLFW
src/: .clangd  CMakeLists.txt  Makefile  camera.h  helloCamera.cpp  helloShader.cpp  helloSpace.cpp  helloTexture.cpp  helloTransformation.cpp  helloTriangle.cpp  helloWindow.cpp  out  shader.h  test  test.cpp
src/shaders/fragment/: color.frag  orange.frag  uniformcolor.frag
src/shaders/vertex/: 3d.vert  color.vert  move.vert  moveTransform.vert  texture.vert  transform.vert
(+1 files in other folders)
